# xIrc

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  MyApp.cpp  MyApp.h  NEWS  README  acinclude.m4  aclocal.m4  bandialog.ui  bandialog.ui.h  channeldialog.ui  channeldialog.ui.h  channickbox.ui  channickbox.ui.h  config.status  configure  configure.in  invitebox.ui  invitebox.ui.h  ircreply.h  kickmsgdialog.ui  kickmsgdialog.ui.h  mkinstalldirs  nickaction.ui  nickaction.ui.h  nicknameform.ui  nicknameform.ui.h  peopledialog.ui  peopledialog.ui.h  peopleedit.ui  peopleedit.ui.h  quitform.ui  quitform.ui.h  serverconnectdialog.ui  serverconnectdialog.ui.h  (+92 more)
libX++/: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.in  libX.pro  libX.pro~  xApp.cpp  xApp.h  xCheckBox.cpp  xCheckBox.h  xComboBox.cpp  xComboBox.h  xConfirmation.cpp  xConfirmation.h  xDefaults.cpp  xDefaults.h  xDialog.cpp  xDialog.h  xEdit.cpp  xEdit.h  xEditList.cpp  xEditList.h  xFileDialog.cpp  xFileDialog.h  xFrame.cpp  xFrame.h  xGauge.cpp  xGauge.h  xInputFrame.cpp  xInputFrame.h  xLabel.cpp  xLabel.h  xLabeledList.cpp  xLabeledList.h  (+47 more)
