dnl Process this file with autoconf to produce a configure script.
AC_INIT(xApp.h)
AM_INIT_AUTOMAKE(libX++, 2.3.8)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Test if the compiler is for egcs
if test "`uname -s`" = "Linux"
then
   if test "`gcc --version | cut -c 1-4`" = "egcs"
   then
      CXXFLAGS="-g"
      AC_SUBST(CXXFLAGS)
   fi
fi

dnl Checks for header files.
AC_PATH_X

dnl Check for QT stuff
AC_PATH_QT_LIB

if test "$have_qt_lib" = no; then
  AC_MSG_ERROR([

I can't find the QT libraries.

Install the QT libraries, or if you have them installed, override this check
with the --with-qt-libraries argument, and I'll take your word for it.
])

fi

AC_PATH_QT_INC
if test "$have_qt_inc" = no; then
  AC_MSG_ERROR([

I can't find the QT header files.

Install the QT development package, or if you have them installed, override
this check with the --with-qt-includes argument, and I'll take your word for
it.
])

fi

AC_MSG_CHECKING(for Qt >= 2.1.0)
if test -r $QTDIR/include/qinputdialog.h; then
  AC_MSG_RESULT(yes)
 else
  AC_MSG_ERROR([  Sorry, but you need Qt version 2.1.0 or higher to compile $PACKAGE])
fi

AC_PATH_QT_MOC
AC_PATH_QT_FINDTR
AC_PATH_QT_MSGTOQM
AC_PATH_QT_MERGETR

dnl Check for socklen_t
AC_C_SOCKLEN_T

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_OUTPUT(Makefile)
